<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--회원가입-->
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/brightGreen"
        android:theme="@style/AppTheme.NoActionBar">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/memberinfochange"
            android:textColor="@color/black"
            android:textSize="25sp"
            />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="8dp">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:gravity="left"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
        <EditText
            android:id="@+id/chNick"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/jbNick"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:text="중복확인"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:gravity="left"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
        <EditText
            android:id="@+id/chPwd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/password2"
            android:gravity="left"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
        <EditText
            android:id="@+id/chPwd_ck"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <ImageView
            android:id="@+id/setCk1"
            android:layout_width="24dp"
            android:layout_height="30dp"
            android:scaleType="fitStart"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:gravity="left"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
        <EditText
            android:id="@+id/chEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

        <ImageView
            android:id="@+id/setCk2"
            android:layout_width="24dp"
            android:layout_height="30dp"
            android:scaleType="fitStart"
            android:layout_gravity="center"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/chBtnReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infochange"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp" />
        <Button
            android:id="@+id/btnMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancle"
            android:background="@drawable/round_button2"
            android:textColor="@color/black"/>

    </LinearLayout>
</LinearLayout>






















