<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@drawable/navigation"
    android:orientation="horizontal"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_log"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="35dp" />

        <TextView
            android:id="@+id/nav_text1"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20dp"
            android:background="@drawable/navigation"
            android:textColor="@color/black"
            android:hint="@string/nickname" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_alarm"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="15dp"
            android:text="@string/setting" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:text="@string/logout" />

    </LinearLayout>

</LinearLayout>
