<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/brightGreen"
        android:theme="@style/AppTheme.NoActionBar">
        <ImageView
            android:id="@+id/back_go"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/back_black"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bottom_5"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_ranking" />

        <TextView
            android:id="@+id/rank_text1"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_toEndOf="@+id/image1"
            android:layout_toRightOf="@+id/image1"
            android:gravity="center"
            android:text="@string/week_recipe" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/image1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_ranking" />

        <TextView
            android:id="@+id/rank_text2"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/rank_text1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/image2"
            android:layout_toRightOf="@+id/image2"
            android:gravity="center"
            android:text="@string/mon_recipe" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/image2"
            android:src="@drawable/ic_ranking" />

        <TextView
            android:id="@+id/rank_text3"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/rank_text2"
            android:layout_toEndOf="@+id/image3"
            android:layout_toRightOf="@+id/image3"
            android:gravity="center"
            android:text="@string/che_rank" />

    </RelativeLayout>
</LinearLayout>